tests/NormalTests/paczka1/small_fuzzy/81809058.err
Error in line 1: A392 S516 70,0
Error in line 2: 33xiy8CYBxC A265 30,4
Error in line 14: A392 S516 337,9
